--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react": "16.4.1",
+    "react-native": "^0.57.4"
   }
 }
